--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     border-radius: 3px !important;
     font-weight: 300 !important;
     font-size: 13px !important;
+    border: 0.5px solid #5E9BED !important;
 }
 
 .bp5-file-upload-input:hover::after {
