--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 
-.bp5-file-upload-input {
+.input>.bp5-file-upload-input {
     border-radius: 3px !important;
 }
 
-.bp5-file-upload-input::after {
+.input>.bp5-file-upload-input::after {
     background-color: rgb(47,128,237) !important;
     color: rgb(255, 255, 255) !important;
     border-radius: 3px !important;
@@ -16,7 +16,7 @@
     border: 0.5px solid #5E9BED !important;
 }
 
-.bp5-file-upload-input:hover::after {
+.input>.bp5-file-upload-input:hover::after {
     background-color: rgba(47,128,237, 0.9) !important;
 }
 
