--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .input>.bp5-file-upload-input::after {
-    background-color: rgb(47,128,237) !important;
+    background-color: rgb(60, 89, 193) !important;
     color: rgb(255, 255, 255) !important;
     border-radius: 3px !important;
     font-weight: 300 !important;
@@ -17,7 +17,7 @@
 }
 
 .input>.bp5-file-upload-input:hover::after {
-    background-color: rgba(47,128,237, 0.9) !important;
+    background-color: rgba(47,128,237,1) !important;
 }
 
 .bp5-html-select select, .bp5-select select {
